examples/should-fail/f01_prop_as_function.lean
def demo_bad_prop_as_function : Prop :=
  Prop Prop
